--- a/templates/header_sidebar.css
+++ b/templates/header_sidebar.css
@@ -1,5 +1,3 @@
-/*header*/
-
 .header {
     position: fixed;
     top: 0;
@@ -17,17 +15,15 @@
     padding-right: 40px;
 }
 
-.headerHeadlineBox {
+.header-headline {
     display: flex;
 }
 
-/* ? */
-
-.headImgLeft {
+.headImg-left {
     display: none;
 }
 
-.headBoxRight {
+.header-right-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,11 +31,11 @@
     gap: 16px;
 }
 
-.headBoxRightImg {
+.header-right-container img {
     width: 32px;
 }
 
-.headBoxRightUserCircle {
+.header-user-circle {
     border-radius: 50%;
     width: 56px;
     height: 56px;
@@ -50,15 +46,10 @@
     align-items: center;
 }
 
-.headBoxRightUserCircle:hover {
+.header-user-circle:hover {
     background: #E1E5EC;
     cursor: pointer;
 }
-
-/*------------------------------------------------*/
-
-
-/*Sidebar*/
 
 .sidebar {
     position: fixed;
@@ -107,15 +98,15 @@
     text-decoration: none;
 }
 
-.sideBarCategory {
+.sidebar-category {
     margin: 7.5px 0;
 }
 
-.sideBarCategory:hover {
+.sidebar-category:hover {
     background: #2A3D59;
 }
 
-.quickLinksSidebar {
+.sidebar-quicklinks {
     display: flex !important;
     flex-direction: column;
     gap: 4px;
@@ -133,34 +124,20 @@
     font-weight: bold;
 }
 
-.htmlActive {
+.html-active {
     background-color: #091931;
 }
-
-/*------------------------------------------------*/
-
-
-/*???*/
 
 .police {
     display: flex;
     justify-content: center;
 }
 
-
-/*???*/
-
-
-/*???*/
-
 .header-title {
     display: flex;
     display: flex;
     align-items: center;
 }
-
-
-/*???*/
 
 #header-summary {
     margin-top: 110px;
@@ -191,7 +168,6 @@
         justify-content: space-between;
     }
 
-
     .sidebar {
         width: calc(243px - 83px);
     }
@@ -200,7 +176,7 @@
         padding: 8px 20px;
     }
 
-    .quickLinksSidebar {
+    .sidebar-quicklinks {
         padding-left: 20px !important;
     }
 
@@ -227,11 +203,11 @@
         margin-bottom: 110px;
     }
 
-    .headerHeadlineBox {
+    .header-headline {
         display: none !important;
     }
 
-    .headImgLeft {
+    .headImg-left {
         display: unset;
     }
 
@@ -249,7 +225,6 @@
         margin-top: 0;
     }
 
-    /*Sidebar*/
     .sidebar {
         position: fixed;
         left: 0;
@@ -269,11 +244,11 @@
         display: none;
     }
 
-    .quickLinksSidebar {
+    .sidebar-quicklinks {
         display: none !important;
     }
 
-    .sideBarCategory:hover {
+    .sidebar-category:hover {
         background: none;
     }
 
@@ -300,7 +275,7 @@
         height: 24px !important;
     }
 
-    .htmlActive {
+    .html-active {
         border-radius: 16px;
     }
 
@@ -327,16 +302,12 @@
         width: 100%;
     }
 
-    .headBoxRightUserCircle {
+    .header-user-circle {
         width: 40px !important;
         height: 40px !important;
     }
 
     .fontSize16 {
         font-size: 14px !important;
-    }
-
-    .headBoxRightImg {
-        display: none;
     }
 }
