--- a/style/contacts-mediaQuery.css
+++ b/style/contacts-mediaQuery.css
@@ -58,10 +58,10 @@
      }
 
      #close_popup_mobile img:hover {
-        cursor: pointer;
-        border-radius: 5px;
-        background-color: lightslategray;
-    }
+         cursor: pointer;
+         border-radius: 5px;
+         background-color: lightslategray;
+     }
 
      .contact-popup {
          display: flex !important;
@@ -113,33 +113,10 @@
          justify-content: center;
      }
 
-     /* .cancelBtn {
-         margin-right: 20px !important;
-     } */
-
-     /* .inputName input, */
-     /* .inputPhone input, */
      .register_email_container input {
          width: calc(600px - 64px) !important;
          height: calc(26px + 15px) !important;
      }
-
-     /* .closePopupCross path {
-         fill: white !important;
-     } */
-
-     /* top: calc(0px -(100vh* 0.4) + 2px) !important; */
-     /* .closePopupCross {
-         position: absolute;
-         top: calc(0px - (100vh * 0.4) + -16px);
-         right: 16px !important;
-     } */
-
-     /* .cancelBtn, */
-     /* .createContactButton {
-         padding: 18px 10px !important;
-         width: auto !important;
-     } */
 
      .left-popup img {
          top: 100px !important;
@@ -153,265 +130,248 @@
          width: auto;
      }
 
-     .right-container-headline {
-         margin: 0px 12px 32px !important;
-     }
-
-     .contact-detail-container {
-         margin: 0 12px;
-     }
-
-     /* .contact-quickinfo {
-        max-width: 352px !important;
-        min-width: 352px !important;
-    } */
-
-     /* .left-container {
-        width: auto;
-        min-width: 230px;
-        max-width: 230px;
-    } */
-
-
- }
-
- @media (max-width: 768px) {
-
-     .mobile-delete {
-         display: none !important;
-     }
-
-     .mobile-delete,
-     .mobile-edit {
-         align-items: center;
-     }
-
-     .scrolling-container {
-         margin-top: 0 !important;
-     }
-
-     .contact-detail-top {
-         flex-direction: row !important;
-         align-items: center !important;
-     }
-
-     .contact-content {
-         width: 100% !important;
-     }
-
-     .contact-quickinfo {
-         max-width: 100% !important;
-         min-width: 50vw !important;
-         padding: 15px 24px !important;
-         /* flex-direction: row !important; */
-         text-align: start !important;
-     }
-
-     .contact-container {
-         display: flex;
-         flex-direction: row !important;
-         padding-left: 0px !important;
-         width: 100vw !important;
-         margin-top: 80px !important;
-     }
-
      .left-container {
-         width: 100% !important;
-         min-width: 100vw !important;
-         max-width: 100vw !important;
-         height: calc(100vh - 160px) !important;
+         width: 400px;
+     }
+    }
+
+     @media (max-width: 768px) {
+
+         .mobile-delete {
+             display: none !important;
+         }
+
+         .mobile-delete,
+         .mobile-edit {
+             align-items: center;
+         }
+
+         .scrolling-container {
+             margin-top: 0 !important;
+         }
+
+         .contact-detail-top {
+             flex-direction: row !important;
+             align-items: center !important;
+         }
+
+         .contact-content {
+             width: 100% !important;
+         }
+
+         .contact-quickinfo {
+             max-width: 100% !important;
+             min-width: 50vw !important;
+             padding: 15px 24px !important;
+             /* flex-direction: row !important; */
+             text-align: start !important;
+         }
+
+         .contact-container {
+             display: flex;
+             flex-direction: row !important;
+             padding-left: 0px !important;
+             width: 100vw !important;
+             margin-top: 80px !important;
+         }
+
+         .left-container {
+             width: 100% !important;
+             min-width: 100vw !important;
+             max-width: 100vw !important;
+             height: calc(100vh - 160px) !important;
+         }
+
+         .initial {
+             width: 100% !important;
+             justify-content: flex-start !important;
+         }
+
+         #contact_list {
+             width: 100vw !important;
+             padding-left: 38px !important;
+             padding-right: 38px !important;
+         }
+
+         /* popup */
+
+         .contact-popup {
+             height: calc(100vh - 96px) !important;
+             width: calc(100vw - 32px) !important;
+
+         }
+
+         .left-popup {
+             width: calc(100vw - 32px) !important;
+         }
+
+
+         /* .inputPhone input */
+         .register_email_container input {
+             width: calc(100vw - 64px) !important;
+         }
+
+         .left-popup img {
+             top: 154px !important;
+             left: 48px !important;
+         }
+
+         /* popup ende */
+
+         .mobile-add-contact {
+             position: absolute;
+             bottom: calc(80px + 32px);
+             right: 16px;
+             background-color: #2A3647;
+             width: 56px;
+             height: 56px;
+             border-radius: 100%;
+             box-shadow: -2px 0 6px 0 rgb(0, 0, 0, 0.2);
+         }
+
+         .mobile-add-contact img {
+             width: 32px;
+             height: 32px;
+         }
+
+         .mobile-add-contact:hover {
+             background-color: #29ABE2;
+         }
+
+         .contact-details-mobile {
+             position: absolute;
+             top: 80px;
+             bottom: 80px;
+             left: 0;
+             background-color: white;
+             width: 100vw;
+             height: 100vh;
+         }
+
+         .right-container-headline {
+             gap: 8px;
+             height: auto;
+             flex-direction: column;
+             margin: 48px 16px 48px;
+         }
+
+         .right-container-headline img {
+             margin: 0 !important;
+         }
+
+         #blue_line_horicontal {
+             margin-top: 8px;
+             font-size: 0 !important;
+         }
+
+         .contact-detail-container {
+             margin: 0 16px;
+             width: calc(100vw - 32px) !important;
+         }
+
+         .contact-information-text-block {
+             height: auto !important;
+         }
+
+         .success-info {
+             bottom: 195px !important;
+         }
+
+         .big-profile-picture {
+             width: 80px !important;
+             height: 80px !important;
+             margin: 0 20px 0 0 !important;
+         }
      }
 
-     .initial {
-         width: 100% !important;
-         justify-content: flex-start !important;
+     @media (max-width: 550px) {
+         #contact_form {
+             width: 100% !important;
+         }
+
+         .contact-popup-buttons {
+             gap: 12px;
+         }
      }
 
-     #contact_list {
-         width: 100vw !important;
-         padding-left: 38px !important;
-         padding-right: 38px !important;
-     }
+     @media (max-width: 374px) {
 
-     /* popup */
+         #contact_form {
 
-     .contact-popup {
-         height: calc(100vh - 96px) !important;
-         width: calc(100vw - 32px) !important;
+             gap: 15px !important;
+         }
 
-     }
-
-     .left-popup {
-         width: calc(100vw - 32px) !important;
-     }
-
-
-     /* .inputPhone input */
-     .register_email_container input {
-         width: calc(100vw - 64px) !important;
-     }
-
-     .left-popup img {
-         top: 154px !important;
-         left: 48px !important;
-     }
-
-     /* popup ende */
-
-     .mobile-add-contact {
-         position: absolute;
-         bottom: calc(80px + 32px);
-         right: 16px;
-         background-color: #2A3647;
-         width: 56px;
-         height: 56px;
-         border-radius: 100%;
-         box-shadow: -2px 0 6px 0 rgb(0, 0, 0, 0.2);
-     }
-
-     .mobile-add-contact img {
-         width: 32px;
-         height: 32px;
-     }
-
-     .mobile-add-contact:hover {
-         background-color: #29ABE2;
-     }
-
-     .contact-details-mobile {
-         position: absolute;
-         top: 80px;
-         bottom: 80px;
-         left: 0;
-         background-color: white;
-         width: 100vw;
-         height: 100vh;
-     }
-
-     .right-container-headline {
-         gap: 8px;
-         height: auto;
-         flex-direction: column;
-         margin: 48px 16px 48px;
-     }
-
-     .right-container-headline img {
-         margin: 0 !important;
-     }
-
-     #blue_line_horicontal {
-         margin-top: 8px;
-         font-size: 0 !important;
-     }
-
-     .contact-detail-container {
-         margin: 0 16px;
-         width: calc(100vw - 32px) !important;
-     }
-
-     .contact-information-text-block {
-         height: auto !important;
-     }
-
-     .success-info {
-         bottom: 195px !important;
-     }
-
-     .big-profile-picture {
-         width: 80px !important;
-         height: 80px !important;
-         margin: 0 20px 0 0 !important;
-     }
- }
-
- @media (max-width: 550px) {
-     #contact_form {
-         width: 100% !important;
-     }
-
-     .contact-popup-buttons {
-         gap: 12px;
-     }
- }
-
- @media (max-width: 374px) {
-
-     #contact_form {
-
-         gap: 15px !important;
-     }
-
-     .profile-edit-img,
-     .circle {
-         /* width: 70px;
+         .profile-edit-img,
+         .circle {
+             /* width: 70px;
         height: 70px; */
-         /* margin-top: -35px !important; */
-     }
+             /* margin-top: -35px !important; */
+         }
 
-     .person-in-circle {
-         /* width: 30px;
+         .person-in-circle {
+             /* width: 30px;
         height: 30px; */
-     }
+         }
 
-     /* .closePopupCross{
+         /* .closePopupCross{
         top: calc(0px -(100vh* 0.4) + -36px) !important;
     } */
-     /* .center-popup {
+         /* .center-popup {
         margin-top: -40px;
      } */
 
-     .contact-detail-top {
-         flex-direction: column !important;
-         align-items: start !important;
+         .contact-detail-top {
+             flex-direction: column !important;
+             align-items: start !important;
+         }
+
+         .contact-quickinfo {
+             display: flex;
+             /* flex-direction: column !important; */
+             padding: 15px 24px 15px 24px !important;
+             align-items: flex-start !important;
+         }
+
+         .initial {
+             padding: 15px 36px 15px 24px !important;
+         }
      }
 
-     .contact-quickinfo {
-         display: flex;
-         /* flex-direction: column !important; */
-         padding: 15px 24px 15px 24px !important;
-         align-items: flex-start !important;
+     @media (max-height: 1150px) {}
+
+     @media (max-height: 700px) {
+         .contact-detail-container {
+             overflow-y: scroll !important;
+             height: calc(100vh - 319.5px) !important;
+         }
+
+         #phoneId {
+             padding-bottom: 8px;
+         }
+
+         .right-container-headline {
+             margin: 32px 16px 32px !important;
+         }
+
+         .big-profile-picture {
+             width: 60px !important;
+             height: 60px !important
+         }
      }
 
-     .initial {
-         padding: 15px 36px 15px 24px !important;
+     @media (max-height: 860px) and (min-width: 769px) {
+
+
+         .contact-information-text-block {
+             height: auto;
+         }
+
+         .big-profile-picture {
+             width: 80px;
+             height: 80px;
+         }
+
+         .contact-details-mobile {
+             margin-top: -100px;
+         }
      }
- }
-
- @media (max-height: 1150px) {}
-
- @media (max-height: 700px) {
-     .contact-detail-container {
-         overflow-y: scroll !important;
-         height: calc(100vh - 319.5px) !important;
-     }
-
-     #phoneId {
-         padding-bottom: 8px;
-     }
-
-     .right-container-headline {
-         margin: 32px 16px 32px !important;
-     }
-
-     .big-profile-picture {
-         width: 60px !important;
-         height: 60px !important
-     }
- }
-
- @media (max-height: 860px) and (min-width: 769px) {
-
-
-     .contact-information-text-block {
-         height: auto;
-     }
-
-     .big-profile-picture {
-         width: 80px;
-         height: 80px;
-     }
-
-     .contact-details-mobile {
-         margin-top: -100px;
-     }
- }
