--- a/style/contacts-addContact.css
+++ b/style/contacts-addContact.css
@@ -43,9 +43,6 @@
     position: absolute;
     width: 64px;
     height: 64px;
-    /* top: 264px;
-    left: 50%;
-    transform: translate(-50%, -50%); */
 }
 
 .contact-popup-bg {
@@ -63,18 +60,17 @@
     justify-content: flex-end;
     margin-bottom: 32px;
 }
+
 #close_popup img:hover {
     background: #EEEEEE;
-    border-radius:5px;
+    border-radius: 5px;
 }
-
 
 #close_popup_mobile {
     display: none;
 }
 
 .contact-popup {
-    /* width: 1212px; */
     height: 592px;
     border-bottom-right-radius: 30px;
     border-top-right-radius: 30px;
@@ -136,10 +132,7 @@
     z-index: 1;
 }
 
-/* .inputName input, */
-/* .inputPhone input, */
-.register_email_container input
-{
+.register_email_container input {
     width: calc(41px + 380px);
     height: calc(26px + 24px);
     padding: 13px 21px;
@@ -148,8 +141,6 @@
     background: #FFF;
 }
 
-/* .inputName, */
-/* .inputPhone, */
 .register_email_container {
     position: relative;
 }
@@ -158,7 +149,6 @@ textarea:focus,
 input:focus {
     outline: 1px solid #29ABE2;
 }
-
 
 input {
     outline: none;
@@ -174,40 +164,31 @@ input:focus {
 input[type=text] {
     background: url('../img/lock.svg') no-repeat scroll;
     background-position: center right;
-    /* 16px */
     background-origin: content-box;
 }
 
 input[type=email] {
     background: url('../img/mail.svg') no-repeat scroll;
     background-position: center right -2px;
-    /* DON'T DELETE IMPORTANT FOR SYMETRY! */
     background-origin: content-box;
 }
 
 input[type=tel] {
     background: url('../img/call.svg') no-repeat scroll;
     background-position: center right;
-    /* 20px */
     background-origin: content-box;
 }
 
 input[type=date] {
     background: url('../img/calendar.png') no-repeat scroll;
-    
     background-position: center right;
-    /* 20px */
     background-origin: content-box;
 }
 
-/* .inputName input:hover, */
-/* .inputPhone input:hover */
 .register_email_container input:hover {
     border: 1px solid #29ABE2;
 }
 
-/* .inputName img, */
-/* .inputPhone img */
 .register_email_container img {
     position: absolute;
     top: 50%;
