--- a/style/login.css
+++ b/style/login.css
@@ -43,19 +43,19 @@ input:focus {
 
 input[type=text] {
     background: url('../img/lock.svg') no-repeat scroll;
-    background-position: center right; /* 16px */
+    background-position: center right;
     background-origin: content-box;
 }
 
 input[type=email] {
     background: url('../img/mail.svg') no-repeat scroll;
-    background-position: center right -2px; /* DON'T DELETE IMPORTANT FOR SYMETRY! */
+    background-position: center right -2px;
     background-origin: content-box;
 }
 
 input[type=password] {
     background: url('../img/lock.svg') no-repeat scroll;
-    background-position: center right; /* 20px */
+    background-position: center right;
     background-origin: content-box;
 }
 
@@ -65,7 +65,7 @@ input[type=password] {
 #register_email,
 #login_password,
 #login_email {
-    font-size: 14px; /* 20 */
+    font-size: 14px;
 }
 
 .button-log-in {
@@ -92,7 +92,6 @@ input[type=password] {
     margin-left: calc(35px / 2);
 }
 
-/* REGISTER */
 .button-guest-login {
     background-color: var(--text-white);
     color: var(--main-color);
@@ -237,7 +236,6 @@ header {
     gap: 32px;
 }
 
-/* ----------------------------------------------------------MEDIA---------------------------------------------------------- */
 
 @media (max-width: 900px) {
     .dialog-login {
@@ -328,7 +326,7 @@ header {
         flex-shrink: 0;
     }
 
-    .police{
+    .police {
         flex-grow: unset;
         padding: 0px 17px 17px 17px;
     }
